fix module menu to text alignment left

--- a/public/stylesheets/Styles.css
+++ b/public/stylesheets/Styles.css
@@ -154,6 +154,10 @@ body {
     text-align: center;
 }
 
+#app #main #sysbar .bar_section#menu  {
+    text-align:left;
+}
+
 #app #main #sysbar .bar_section#toolbar  {
     width: 50%;
 }
